# yandex-webmaster-api

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lint-fix.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql-analysis.yml  create-release.yaml  licensed.yml  lint-and-fix.yml  linter.yml  publish.yaml
src/: client.rs  dto.rs  error.rs  lib.rs  middleware.rs
tests/: itest.rs
