[package]
name = "yandex-webmaster-api"
version = "1.0.1"
edition = "2021"
authors = ["Aleksei Arsenev"]
description = "Rust client for the Yandex Webmaster API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seo-meow/yandex-webmaster-api"
homepage = "https://github.com/seo-meow/yandex-webmaster-api"
documentation = "https://docs.rs/yandex-webmaster-api"
readme = "README.md"
keywords = ["yandex", "webmaster", "api", "seo", "search"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".github/*", ".jscpd.json"]

[dependencies]
# async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "1.0.0-rc.4"

# common
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# http client
reqwest = { version = "0.12.25", features = ["json"] }
reqwest-middleware = "0.4.2"
http = "1.0"

# tracing
tracing = "0.1"

# url encoding
urlencoding = "2.1"

[dev-dependencies]
# test
tokio-test = "0.4"
wiremock = "0.6"

rand = "0.9.2"